# TradingStratTester

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: task_paper.py  tradingstrattester.tex  tradingstrattester_pres.tex
src/tradingstrattester/: __init__.py  config.py
src/tradingstrattester/analysis/: plotting_functions.py  signaling_functions.py  simulated_depot.py  task_analysis.py
src/tradingstrattester/data_management/: __init__.py  data_functions.py  data_gathering.py  task_data_management.py
src/tradingstrattester/final/: __init__.py  task_check_configs.py  task_data.py  task_final.py  task_plot.py  task_signaling.py  task_sim_depot.py
tests/analysis/: test_model.py  test_plotting_functions.py  test_predict.py  test_signaling_functions.py  test_simulated_depot.py
tests/data_management/: test_clean_data.py  test_data.py
