[metadata]
name = tradingstrattester
description = TradingStratTester
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/justinfranken/tradingstrattester
author = Justin Franken
author_email = justin272@gmx.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/justinfranken/tradingstrattester
    Documentation = https://github.com/justinfranken/tradingstrattester
    Github = https://github.com/justinfranken/tradingstrattester
    Tracker = https://github.com/justinfranken/tradingstrattester/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/tradingstrattester/_version.py
